# ai-agent-handson-multi-agent

./: .gitignore  pyproject.toml  requirements.txt  tutorial.md
01_sequential/: agent.py  spec.md
02_parallel/: agent.py
03_loop/: agent.py
04_review-and-critique/: agent.py
05_iterative-refinement/: agent.py  spec.md
06_coordinator/: agent.py
07_hierarchical-task-decomposition/: agent.py  spec.md
08_swarm/: agent.py
09_react/: agent.py
10_human-in-the-loop/: agent.py  spec.md
11_custom-logic/: agent.py  spec.md
example-multi-agent/: README.md  agents-cli-manifest.yaml  pyproject.toml
example-multi-agent/app/: agent.py
example-multi-agent/app/app_utils/: telemetry.py  typing.py
example-multi-agent/deployment/terraform/single-project/: variables.tf
example-multi-agent/deployment/terraform/single-project/vars/: env.tfvars
p01_sequential/: agent.py
p01_sequential/.adk/: session.db
p02_parallel/: agent.py  spec.md
p02_parallel/.adk/: session.db
p03_loop/: agent.py  spec.md
p03_loop/.adk/: session.db
p04_review_and_critique/: agent.py  spec.md
p05_iterative_refinement/: agent.py
p06_coordinator/: agent.py  spec.md
p07_hierarchical_task_decomposition/: agent.py
p08_swarm/: agent.py  spec.md
p09_react/: agent.py  spec.md
p10_human_in_the_loop/: agent.py
p11_custom_logic/: agent.py
